package ca.mcmaster.se2aa4.island.team103;

public interface PointOfInterest {
	public String id();
	public Coordinate coord();
}
